--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_core: ^2.27.0
   intl: ^0.18.1
+  flutter_rating_bar: ^4.0.1
 
 
 dev_dependencies:
