--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   firebase_core: ^2.27.0
   intl: ^0.18.1
   flutter_rating_bar: ^4.0.1
+  flutter_dotenv: ^5.1.0
+  url_launcher: ^6.3.0
+  shared_preferences: ^2.2.3
 
 
 dev_dependencies:
