--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
   shared_preferences: ^2.2.3
+  file_picker: ^6.1.1
 
 
 dev_dependencies:
