--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,15 @@ dependencies:
   url_launcher: ^6.3.0
   shared_preferences: ^2.2.3
   file_picker: ^6.1.1
+  firebase_storage: ^11.6.9
+  uuid: ^4.5.1
+  provider: ^6.1.2
+  cached_network_image: ^3.3.1
+  path_provider: ^2.1.4
+  dio: ^5.4.0
+  photo_view: ^0.15.0
+
+
 
 
 dev_dependencies:
