--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   path_provider: ^2.1.4
   dio: ^5.4.0
   photo_view: ^0.15.0
+  html: ^0.15.0
+  flutter_html: ^3.0.0-beta.2
+  mime: ^2.0.0
 
 
 
