--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ migrate_working_dir/
 *.ipr
 *.iws
 .idea/
+web/.env
+*.env
+assets/config/env.json
+firebase_options.dart
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
