--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/config/env.json  # ✅ Agrega el JSON
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
