--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
+//wompi keys
 
+PUBLIC_KEY=pub_test_0JGU7oYmF0GZ0JX1uSD5nlZul1Ux43A5
+INTEGRITY_SECRET=test_integrity_ChT6KEX5S6V9lq6W7XeN2CLn8Y9VDKV7
 
 FIREBASE_API_KEY_WEB=AIzaSyDTKLwjpQ_JqVkTyMdCWj1MtKRGQJV0Nd8
 FIREBASE_APP_ID_WEB=1:438491594577:web:d2c78e5173d947d7375d70
