--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,7 +105,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/config/env.json  # ✅ Agrega el JSON
+    - assets/config/config.json
+    - assets/config/env.json
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
