--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   html: ^0.15.0
   flutter_html: ^3.0.0-beta.2
   mime: ^2.0.0
+  flutter_inappwebview: ^5.8.0
+  webview_flutter: ^4.5.0
+  webview_flutter_web: ^0.2.2+4
 
 
 
