--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   flutter_inappwebview: ^5.8.0
   webview_flutter: ^4.5.0
   webview_flutter_web: ^0.2.2+4
+  printing: ^5.12.0
+  pdf: ^3.11.3
 
 
 
