--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "openai": "^4.90.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
