Se mejora la intefaz de atender derscho para mobiles, se quita el icono o favicon antes de inicar la app

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "tuprocesoya",
-    "short_name": "tuprocesoya",
+    "name": "Tu proceso Ya",
+    "short_name": "Tu proceso Ya",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#hexcode",
