--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "nodemailer": "^6.10.0",
-    "openai": "^4.90.0"
+    "openai": "^4.90.0",
+    "puppeteer": "^24.4.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
