Se deja funcional la pagina usando el dominio tuprocesoya.com, se crea la pagina web o de bienvenida la cual se muestra al usuario que no esta logueado, se hacen unas mejoras en la plantilla de derechos de peticion (se corrige el correo de recepcion de respuestas de  derechos de peticion), se hace una mejora visual en el login

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "tu-proceso-ya-fe845"
+  },
+  "targets": {
+    "tu-proceso-ya-fe845": {
+      "hosting": {}
+    }
+  },
+  "etags": {},
+  "hosting": {
+    "site": "tu-proceso-ya-fe845"
   }
 }
