--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   pdf: ^3.11.3
   universal_html: ^2.2.4
   connectivity_plus: ^6.0.3
+  crypto: ^3.0.3
+  firebase_auth_web: ^5.9.8
 
 
 
