--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
+    "html-pdf-node": "^1.0.8",
     "nodemailer": "^6.10.0",
     "openai": "^4.90.0",
     "puppeteer": "^24.4.0"
