--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,8 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "html-pdf-node": "^1.0.8",
+    "imap-simple": "^5.1.0",
+    "mailparser": "^3.7.2",
     "nodemailer": "^6.10.0",
     "openai": "^4.90.0",
     "puppeteer": "^24.4.0"
