--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "firebase": "^11.0.2",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2",
-    "imap": "^0.8.19",
+    "imap-simple": "^5.1.0",
     "mailparser": "^3.7.2"
   }
 }
