--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   cloud_functions: ^4.6.8
   diacritic: ^0.1.3
+  fl_chart: ^0.71.0
 
 
 dev_dependencies:
