--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   photo_view: ^0.15.0
   html: ^0.15.0
   flutter_html: ^3.0.0-beta.2
-  mime: ^2.0.0
+  mime: ^1.0.6
   flutter_inappwebview: ^5.8.0
   webview_flutter: ^4.5.0
   webview_flutter_web: ^0.2.2+4
@@ -69,6 +69,8 @@ dependencies:
   diacritic: ^0.1.3
   fl_chart: ^0.71.0
   http: ^1.2.0
+  syncfusion_flutter_xlsio: ^25.2.7
+  share_plus: ^7.2.2
 
 
 dev_dependencies:
